--- a/donor.html
+++ b/donor.html
@@ -66,7 +66,13 @@
 <body>
 <div id= "title">
 <h1 id="galleryname">DONOR.HTML</h1>
-<p class="description">GALLERY.HTML purchases infinitely-reproducable works for its PERMANENTCOLLECTION.HTML through facebook likes and shares.<br><br>An infintiely-reproducable work is valued in likes by the artist and posted to facebook.<br><br>The peice can be added to GALLERY.HTML's PERMANENTCOLLECTION.HTML once an adequate number of likes or shares is donated.<br><br>GALLERY.HTML will repay you with a follow if you contribute a like to successfully purchasing an infinitely-reproducable work.<br><br>The like to share exchange rate is currently 1:10.</p>
+<p class="description">GALLERY.HTML purchases infinitely-reproducible works for its PERMANENTCOLLECTION.HTML through facebook likes and shares.<br><br>
+An infintely-reproducible work is valued in likes by the artist and posted to facebook.<br><br>
+The piece can be added to GALLERY.HTML's PERMANENTCOLLECTION.HTML once an adequate number of likes or shares is donated.<br><br>
+GALLERY.HTML will repay you with a follow if you contribute a like to successfully purchasing an infinitely-reproducible work.<br><br>The like to share exchange rate is currently 1:10.</p>
+<a href="https://facebook.com/GALLERYHTML/" class="entrance">
+<p class="link">Visit FACEBOOK.COM</p>
+</a>
 <a href="index.html" class="entrance">
 <p class="link">Revisit INDEX.HTML</p>
 </a>
