--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@ Supported by social media<br>Established in 2015</p>
 <a href="curatorialstatement.html" class="entrance">
 <p class="link">Read CURATORIALSTATEMENT.HTML</p>
 </a>
+<a href="https://facebook.com/GALLERYHTML/" class="entrance">
+<p class="link">Visit FACEBOOK.COM</p>
+</a>
 </div>
 </body>
 </html>
