--- a/kulik.html
+++ b/kulik.html
@@ -36,14 +36,13 @@ html {
 #signage{
 	Height: 250px;
 	width: 350px;
-	font-family:Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	padding: 10px;
 	margin-left: 45px;
 	margin-right: 90px;
-	background-color:#FFFFFF;
-	font-weight:lighter;
-	font-style:italic;
-	
+	background-color: #FFFFFF;
+	font-weight: lighter;
+	font-style: italic;
 }
 
 .piece{
@@ -143,6 +142,38 @@ html {
 	margin-top:5px;
 	margin-bottom:5px;
 }
+.triptychleftm{
+	max-height: 200px;
+	-webkit-box-shadow: 0px 10px 10px #898989;
+	box-shadow: 0px 3px 3px #898989;
+	margin-left:90px;
+	margin-right: 5px;
+	margin-top:5px;
+	margin-bottom:5px;
+	border: 10px solid #FFFFFF;
+}
+
+.triptychcenterm{
+	max-height: 200px;
+	-webkit-box-shadow: 0px 10px 10px #898989;
+	box-shadow: 0px 3px 3px #898989;
+	margin-left:5px;
+	margin-right: 5px;
+	margin-top:5px;
+	margin-bottom:5px;
+	border: 10px solid #FFFFFF;
+}
+
+.triptychrightm{
+	max-height: 200px;
+	-webkit-box-shadow: 0px 10px 10px #898989;
+	box-shadow: 0px 3px 3px #898989;
+	margin-left: 5px;
+	margin-right: 30px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	border: 10px solid #FFFFFF;
+}
 .piecexs{
 	max-height: 125px;
 	-webkit-box-shadow: 0px 10px 10px #898989;
@@ -163,7 +194,7 @@ html {
     <td>
     <div id="signage">
     <h2 id="showtitle">WHEEL + PAVEMENT</h2>
-    <h3 id="showdescription">The multidisciplinary work of Andrew "Boyarski" Kulik explores the complex, dichotomous relationships between wheel and pavement, sole and tape, skate and board.</h3>
+    <h3 id="showdescription">The multidisciplinary work of Andrew "Boyarski" Kulik explores the complex, dichotomous relationships between wheel and pavement, sole and tape, skate and board.<br><br>Originals Copyright Andrew Kulik</h3>
     </div>
     </td>
     <td>
@@ -217,8 +248,8 @@ html {
     <td>
        <div class="plaque">
        <p class="artist">Boyarski</p>
-       <p class="title">If you do a Kickflip on the Edge of Oblivion, is Anyone there to see how Sick it is? 2013</p>
-       <p class="description">Copperplate Etch on Canson</p>
+       <p class="title">Big Talk, 2015</p>
+       <p class="description">Pronto Plate on Stonehenge</p>
        </div>
     </td>
     <td>
@@ -230,7 +261,25 @@ html {
     <td>
        <div class="plaque">
        <p class="artist">Boyarski</p>
-       <p class="title">If you do a Kickflip on the Edge of Oblivion, is Anyone there to see how Sick it is? 2013</p>
+       <p class="title">Banco / Citgo, 2014</p>
+       <p class="description">35mm Film</p>
+       </div>
+    <td>
+    <img src="Kulik, Andrew Selected Works/scan950.jpg" class="triptychleftm">
+       <img src="Kulik, Andrew Selected Works/scan946.jpg" class="triptychleftm">
+    </td>
+    <td>
+       <img src="Kulik, Andrew Selected Works/scan948.jpg" class="triptychcenterm">
+       <img src="Kulik, Andrew Selected Works/scan947.jpg" class="triptychcenterm">
+    </td>
+    <td>
+      <img src="Kulik, Andrew Selected Works/scan945.jpg" class="triptychrightm">
+       <img src="Kulik, Andrew Selected Works/scan949.jpg" class="triptychrightm">
+    </td>
+    <td>
+       <div class="plaque">
+       <p class="artist">Boyarski</p>
+       <p class="title">Disco Biscuit, 2015</p>
        <p class="description">Copperplate Etch on Canson</p>
        </div>
     </td>
