--- a/permanentcollection.html
+++ b/permanentcollection.html
@@ -5,7 +5,7 @@
 <title>PERMANENTCOLLECTION.HTML</title>
 <style>
 html { 
-  background: url(file:///Macintosh%20HD/Users/Sammael/GitHub/galleryhtml.github.io/gallerywall.jpg) no-repeat center center fixed; 
+  background: url(gallerywall.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -164,7 +164,7 @@ html {
     <td>
     <div id="signage">
     <h2 id="showtitle">PERMANENTCOLLECTION.HTML</h2>
-    <h3 id="showdescription">A collection of infinitely-reproducable works owned by GALLERY.HTML. Purchased with the generous likes of our donors.</h3>
+    <h3 id="showdescription">A collection of infinitely-reproducible works owned by GALLERY.HTML. Purchased with the generous likes of our donors.</h3>
     </div>
     </td>
     <td>
